# zamt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  generalconf.cmake  modules.cmake  targets.cmake
cmake/: AddTarget.cmake  AddTest.cmake
cmake/toolchain/: GccToolchain.cmake  clangToolchain.cmake  gcc-5Toolchain.cmake  gcc-7Toolchain.cmake
core/include/zamt/core/: Log.h
dft_fftw/: sources.cmake
dft_fftw/include/zamt/dft_fftw/: FourierTransform.h
dft_fftw/src/: FourierTransform.cpp
liveaudio_pulse/: sources.cmake
liveaudio_pulse/src/: LiveAudio.cpp
vis_gtk/: sources.cmake
vis_gtk/src/: Visualization.cpp
vis_vulkan/: .gitignore  CMakeLists.txt  README.md  sources.cmake
vis_vulkan/CMakeModules/: ClangToolchain.cmake  FindFFTW3.cmake  FindImgui.cmake  FindPortAudioCpp.cmake
vis_vulkan/include/: common.h  shader_directories.h  visualizationapp.h  window_function.h
vis_vulkan/include/audiohandler/: audiohandler.h
vis_vulkan/include/fourierhandler/: fourierhandler.h
vis_vulkan/include/graphicshandler/: graphicshandler.h
vis_vulkan/include/graphicshandler/detail/: buffers.h  commands.h  debugutils.h  images.h  pipelines.h  rendering.h  shaders.h  swapchains.h  vulkanimpl.h
vis_vulkan/include/guihandler/: guihandler.h  vulkanobjects.h
vis_vulkan/include/windowhandler/: windowhandler.h
vis_vulkan/include/zamt/vis_vulkan/: VulkanVisualizer.h
vis_vulkan/src/: CMakeLists.txt  VulkanVisualizer.cpp  main.cpp  main.orig.cpp  visualizationapp.cpp
vis_vulkan/src/audiohandler/: CMakeLists.txt  audiohandler.cpp
vis_vulkan/src/fourierhandler/: CMakeLists.txt  fourierhandler.cpp
vis_vulkan/src/graphicshandler/: CMakeLists.txt  buffers.cpp  commands.cpp  debugutils.cpp  graphicshandler.cpp  images.cpp  pipelines.cpp  rendering.cpp  shaders.cpp  swapchains.cpp  vulkanimpl.cpp
vis_vulkan/src/graphicshandler/guihandler/: CMakeLists.txt  guihandler.cpp  vulkanobjects.cpp
vis_vulkan/src/graphicshandler/guihandler/gui_shaders/: CMakeLists.txt  glsl_shader.frag  glsl_shader.vert
vis_vulkan/src/graphicshandler/shaders/: CMakeLists.txt  compile_shaders.sh
vis_vulkan/src/graphicshandler/shaders/3Dspectogram/: generate_indices.py  shader.vert
vis_vulkan/src/graphicshandler/shaders/3DspectogramNoClamp/: shader.vert
vis_vulkan/src/graphicshandler/shaders/circle/: generate_indices.py  shader.vert
vis_vulkan/src/graphicshandler/shaders/sindot3-space/: generate_indices.py  shader.frag  shader.vert
vis_vulkan/src/graphicshandler/shaders/spiral/: generate_indices.py  shader.vert
vis_vulkan/src/windowhandler/: CMakeLists.txt  windowhandler.cpp
